############################################################################
# QSkinny - Copyright (C) The authors
#           SPDX-License-Identifier: BSD-3-Clause
############################################################################

qsk_add_example(models MainView.h MainView.cpp main.cpp)
target_link_libraries(models)
